--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
-python:
-  -"3.5"
+        - python: 3.7
+          dist: xenial
+          sudo: true
 services:
   -docker
 before_script: pip install docker-compose
