--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
-        - python: 3.7
-          dist: xenial
-          sudo: true
+python:
+- "3.6"       
 services:
   -docker
+
 before_script: pip install docker-compose
 
 script:
